syntax = "proto3";

package proto;

option java_package = "maple.proto";
option go_package = "gosuproto";

import "wrappers.proto";

// RPC - User

service ESLService {
    // Check if an email belongs to an esl staff member
    //
    // Only emails ending in @staff.eslgaming.com will
    // result in a positive value
    rpc IsStaffMember (google.protobuf.StringValue) returns (google.protobuf.BoolValue);
}
